--- a/WikiNoteBook/.zim/state.conf
+++ b/WikiNoteBook/.zim/state.conf
@@ -4,17 +4,30 @@ treeview=tagged
 tagcloud_sorting=score
 
 [History]
-list=[["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173",38,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173:soa\u76f8\u5173\u5730\u5740",467,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173",38,null],["\u4e13\u4e1a\u6280\u80fd",37,null],["\u4e13\u4e1a\u6280\u80fd:java\u76f8\u5173",39,null],["\u4e13\u4e1a\u6280\u80fd",37,null],["\u4e13\u4e1a\u6280\u80fd:java\u76f8\u5173",39,null],["\u516c\u53f8\u8d44\u6599",37,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599",37,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173",38,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173:soa\u76f8\u5173\u5730\u5740",467,null],["\u6269\u5c55\u6280\u80fd",37,null],["\u4e13\u4e1a\u6280\u80fd:java\u76f8\u5173",39,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",40,null],["\u516c\u53f8\u8d44\u6599",37,null],["\u6269\u5c55\u6280\u80fd",37,null],["\u4e13\u4e1a\u6280\u80fd",37,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",40,null],["\u4e13\u4e1a\u6280\u80fd",37,null],["\u4e13\u4e1a\u6280\u80fd:\u963f\u91cc\u4e91\u670d\u52a1\u5668\u67b6\u8bbe",41,null],["\u4e13\u4e1a\u6280\u80fd",37,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173",37,null],["\u6269\u5c55\u6280\u80fd",37,null],["\u5b66\u4e60\u8d44\u6e90\u5e93",38,null],["\u516c\u53f8\u8d44\u6599",null,null]]
-recent=[["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173",38,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173:soa\u76f8\u5173\u5730\u5740",467,null],["\u4e13\u4e1a\u6280\u80fd:java\u76f8\u5173",39,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",40,null],["\u4e13\u4e1a\u6280\u80fd:\u963f\u91cc\u4e91\u670d\u52a1\u5668\u67b6\u8bbe",41,null],["\u4e13\u4e1a\u6280\u80fd",37,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173",37,null],["\u6269\u5c55\u6280\u80fd",37,null],["\u5b66\u4e60\u8d44\u6e90\u5e93",38,null],["\u516c\u53f8\u8d44\u6599",null,null]]
+list=[["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173:soa\u76f8\u5173\u5730\u5740",617,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173:soa-admin\u4f7f\u7528",0,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173",38,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599",0,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898:tomcat\u95ee\u9898",40,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898",68,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:sql\u793a\u4f8b",338,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898:tomcat\u95ee\u9898",223,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",120,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",38,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",120,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u9ad8\u7ea7\u6307\u4ee4",38,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",165,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u9ad8\u7ea7\u6307\u4ee4",128,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",818,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898",68,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599",0,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173",38,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",818,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u9ad8\u7ea7\u6307\u4ee4",128,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",120,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898:tomcat\u95ee\u9898",223,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u9ad8\u7ea7\u6307\u4ee4",128,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",244,null]]
+recent=[["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173",38,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599",0,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898",68,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:sql\u793a\u4f8b",338,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898:tomcat\u95ee\u9898",223,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",120,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u9ad8\u7ea7\u6307\u4ee4",128,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",244,null]]
 current=24
 
 [MainWindow]
-windowpos=[-8,-8]
+windowpos=[0,0]
 windowsize=[1920,1028]
 left_pane=[true,200,"\u76ee\u5f55"]
 right_pane=[false,200,null]
 top_pane=[false,200,null]
 bottom_pane=[false,200,null]
+readonly=False
+active_tabs=None
+show_menubar=True
+show_menubar_fullscreen=True
+show_toolbar=True
+show_toolbar_fullscreen=False
+show_statusbar=True
+show_statusbar_fullscreen=False
+pathbar_type=recent
+pathbar_type_fullscreen=none
+toolbar_style=None
+toolbar_size=None
+toggle_panes=[]
 
 [NewPageDialog]
 windowsize=[301,154]
@@ -24,4 +37,41 @@ windowsize=[303,139]
 
 [OpenPageDialog]
 windowsize=[267,108]
+
+[AttachFileDialog]
+windowsize=[500,400]
+last_attachment_folder=C:\\Users\\lenovo\\Desktop
+insert_attached_images=True
+
+[SearchDialog]
+windowsize=[400,300]
+
+[InsertSymbolDialog]
+windowsize=[350,400]
+
+[TaskListDialog]
+windowsize=[550,400]
+hpane_pos=75
+only_show_act=True
+
+[WordCountDialog]
+windowsize=[195,154]
+
+[SaveVersionDialog]
+windowsize=[-1,-1]
+
+[InsertDateDialog]
+windowsize=[301,168]
+lastusedformat=%x
+linkdate=False
+calendar_expanded=False
+
+[NotebookDialog]
+windowsize=[500,400]
+
+[RenamePageDialog]
+windowsize=[255,185]
+
+[AddApplicationDialog]
+windowsize=[255,189]
 
