--- a/WikiNoteBook/.zim/state.conf
+++ b/WikiNoteBook/.zim/state.conf
@@ -4,8 +4,8 @@ treeview=tagged
 tagcloud_sorting=score
 
 [History]
-list=[["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173:soa\u76f8\u5173\u5730\u5740",617,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173:soa-admin\u4f7f\u7528",0,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173",38,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599",0,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898:tomcat\u95ee\u9898",40,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898",68,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:sql\u793a\u4f8b",338,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898:tomcat\u95ee\u9898",223,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",120,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",38,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",120,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u9ad8\u7ea7\u6307\u4ee4",38,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",165,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u9ad8\u7ea7\u6307\u4ee4",128,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",818,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898",68,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599",0,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173",38,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",818,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u9ad8\u7ea7\u6307\u4ee4",128,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",120,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898:tomcat\u95ee\u9898",223,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u9ad8\u7ea7\u6307\u4ee4",128,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",244,null]]
-recent=[["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173",38,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599",0,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898",68,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:sql\u793a\u4f8b",338,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898:tomcat\u95ee\u9898",223,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",120,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u9ad8\u7ea7\u6307\u4ee4",128,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173:\u57fa\u672c\u6307\u4ee4",244,null]]
+list=[["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:Jquery",40,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:\u6570\u636e\u6a21\u677f",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:\u6570\u636e\u6a21\u677f:freemarker",701,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u5b66\u77e5\u8bc6",0,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173",38,null],["\u4e13\u4e1a\u6280\u80fd:java\u76f8\u5173:\u5e38\u7528IDE:Ideal\u5feb\u6377\u952e",412,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173",38,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:redis\u76f8\u5173",41,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:Jquery",40,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173",37,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:Ajax",38,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:Jquery",40,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:NodeJs",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:Jquery",40,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:Ajax",38,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:Jquery",40,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:NodeJs",39,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:Jquery",40,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:Ajax",38,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:redis\u76f8\u5173",41,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:redis\u76f8\u5173:redis\u547d\u4ee4\u53c2\u8003",82,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:mysql",0,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:redis\u76f8\u5173",41,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:NodeJs",39,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:\u6570\u636e\u6a21\u677f",null,null]]
+recent=[["\u4e13\u4e1a\u6280\u80fd:java\u76f8\u5173:\u5e38\u7528IDE:Ideal\u5feb\u6377\u952e",412,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173",38,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173",37,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:Jquery",40,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:Ajax",38,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:redis\u76f8\u5173:redis\u547d\u4ee4\u53c2\u8003",82,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:mysql",0,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173:redis\u76f8\u5173",41,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:NodeJs",39,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:\u6570\u636e\u6a21\u677f",null,null]]
 current=24
 
 [MainWindow]
@@ -74,4 +74,20 @@ windowsize=[255,185]
 
 [AddApplicationDialog]
 windowsize=[255,189]
+
+[ImportPageDialog]
+windowsize=[500,400]
+
+[ExportDialog]
+windowsize=[400,325]
+document_root_url=
+selection=all
+selected_page=专业技能:linux相关:基本指令
+format=HTML
+template=Default
+template_file=None
+document_root=absolute
+output_folder=~/Desktop/New folder
+index_page=default
+output_file=None
 
