Saved version from zim

--- a/WikiNoteBook/.zim/state.conf
+++ b/WikiNoteBook/.zim/state.conf
@@ -4,13 +4,13 @@ treeview=tagged
 tagcloud_sorting=score
 
 [History]
-list=[["\u4e13\u4e1a\u6280\u80fd",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:linux\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:java\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u5b66\u77e5\u8bc6",0,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u636e\u5e93\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u7f16\u7a0b\u9047\u5230\u7684\u95ee\u9898",68,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:\u8fd0\u8425\u540e\u53f0",92,null],["Journal",41,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599",0,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:\u8fd0\u8425\u540e\u53f0",92,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:\u8fd0\u8425\u540e\u53f0:stash",46,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:\u8fd0\u8425\u540e\u53f0",371,null],["\u516c\u53f8\u8d44\u6599:\u6280\u672f\u8d44\u6599:soa\u76f8\u5173:soa\u76f8\u5173\u5730\u5740",0,null],["\u6269\u5c55\u6280\u80fd",0,null],["\u6269\u5c55\u6280\u80fd:NodeJs\u5b66\u4e60",0,null],["\u6269\u5c55\u6280\u80fd:NodeJs\u5b66\u4e60:log4js",114,null],["\u6269\u5c55\u6280\u80fd:NodeJs\u5b66\u4e60:\u57fa\u672c\u6982\u5ff5",0,null],["\u6269\u5c55\u6280\u80fd:NodeJs\u5b66\u4e60:NodeJs\u548c\u6570\u636e\u5e93",341,null],["\u516c\u53f8\u8d44\u6599",37,null],["\u5b66\u4e60\u8d44\u6e90\u5e93",0,null],["\u6269\u5c55\u6280\u80fd",0,null],["\u5b66\u4e60\u8d44\u6e90\u5e93",0,null],["\u4e13\u4e1a\u6280\u80fd",0,null],["\u516c\u53f8\u8d44\u6599",37,null]]
-recent=[["\u6269\u5c55\u6280\u80fd:NodeJs\u5b66\u4e60",0,null],["\u6269\u5c55\u6280\u80fd:NodeJs\u5b66\u4e60:log4js",114,null],["\u6269\u5c55\u6280\u80fd:NodeJs\u5b66\u4e60:\u57fa\u672c\u6982\u5ff5",0,null],["\u6269\u5c55\u6280\u80fd:NodeJs\u5b66\u4e60:NodeJs\u548c\u6570\u636e\u5e93",null,null],["\u6269\u5c55\u6280\u80fd",0,null],["\u5b66\u4e60\u8d44\u6e90\u5e93",0,null],["\u4e13\u4e1a\u6280\u80fd",0,null]]
-current=23
+list=[["\u6269\u5c55\u6280\u80fd:NodeJs\u5b66\u4e60:NodeJs\u5b66\u4e60:\u65e5\u5fd7\u5904\u7406",150,null],["\u6269\u5c55\u6280\u80fd:\u4e1a\u52a1\u7406\u89e3",0,null],["\u6269\u5c55\u6280\u80fd:\u4e1a\u52a1\u7406\u89e3:\u4e00\u5f20\u56fe\u770b\u61c2\u4fc3\u9500",0,null],["\u6269\u5c55\u6280\u80fd:\u4e1a\u52a1\u7406\u89e3",0,null],["\u6269\u5c55\u6280\u80fd:\u4e1a\u52a1\u7406\u89e3:\u4e00\u5f20\u56fe\u770b\u61c2\u4fc3\u9500",0,null],["\u6269\u5c55\u6280\u80fd:\u4e1a\u52a1\u7406\u89e3",0,null],["\u6269\u5c55\u6280\u80fd:\u4e1a\u52a1\u7406\u89e3:\u4e00\u5f20\u56fe\u770b\u61c2\u4fc3\u9500",0,null],["\u6269\u5c55\u6280\u80fd:\u5f00\u53d1\u6548\u7387",0,null],["\u6269\u5c55\u6280\u80fd:\u8d44\u6599\u5feb\u901f\u68c0\u7d22",0,null],["\u6269\u5c55\u6280\u80fd:\u8d44\u6599\u5feb\u901f\u68c0\u7d22:\u4e0b\u8f7d",67,null],["\u5b66\u4e60\u8d44\u6e90\u5e93:\u5b66\u4e60\u7f51\u7ad9",0,null],["\u4e13\u4e1a\u6280\u80fd",0,null],["\u4e13\u4e1a\u6280\u80fd:java\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:NodeJs",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:\u6570\u636e\u6a21\u677f",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:\u6570\u636e\u6a21\u677f:freemarker",299,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u5b66\u77e5\u8bc6",0,null],["Journal:2017:01:20",19,null],["\u5b66\u4e60\u8d44\u6e90\u5e93:\u5b66\u4e60\u7f51\u7ad9",0,null],["\u4e13\u4e1a\u6280\u80fd",0,null],["\u4e13\u4e1a\u6280\u80fd:java\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:\u6570\u636e\u6a21\u677f",0,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u5b66\u77e5\u8bc6",38,null]]
+recent=[["\u6269\u5c55\u6280\u80fd:\u8d44\u6599\u5feb\u901f\u68c0\u7d22:\u4e0b\u8f7d",67,null],["\u5b66\u4e60\u8d44\u6e90\u5e93:\u5b66\u4e60\u7f51\u7ad9",0,null],["\u4e13\u4e1a\u6280\u80fd",0,null],["\u4e13\u4e1a\u6280\u80fd:java\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:NodeJs",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:\u6570\u636e\u6a21\u677f",0,null],["\u4e13\u4e1a\u6280\u80fd:\u524d\u7aef\u76f8\u5173:\u6570\u636e\u6a21\u677f:freemarker",0,null],["Journal:2017:01:20",19,null],["\u4e13\u4e1a\u6280\u80fd:\u6570\u5b66\u77e5\u8bc6",38,null]]
+current=24
 
 [MainWindow]
 windowpos=[0,0]
-windowsize=[1912,1028]
+windowsize=[1916,1028]
 left_pane=[true,200,"Index"]
 right_pane=[false,200,null]
 top_pane=[false,200,null]
@@ -36,7 +36,7 @@ windowsize=[301,154]
 windowsize=[303,139]
 
 [OpenPageDialog]
-windowsize=[279,108]
+windowsize=[285,108]
 
 [AttachFileDialog]
 windowsize=[500,400]
@@ -58,7 +58,7 @@ only_show_act=True
 windowsize=[195,154]
 
 [SaveVersionDialog]
-windowsize=[-1,-1]
+windowsize=[301,154]
 
 [InsertDateDialog]
 windowsize=[301,168]
@@ -70,7 +70,7 @@ calendar_expanded=False
 windowsize=[500,400]
 
 [RenamePageDialog]
-windowsize=[328,185]
+windowsize=[332,185]
 
 [AddApplicationDialog]
 windowsize=[255,189]
@@ -82,12 +82,16 @@ windowsize=[500,400]
 windowsize=[400,325]
 document_root_url=
 selection=all
-selected_page=Journal
+selected_page=\u4e13\u4e1a\u6280\u80fd
 format=HTML
 template=ZeroFiveEight
 template_file=None
 document_root=absolute
 output_folder=~/Desktop/New folder
-index_page=wikiindex.html
+index_page=default.html
 output_file=None
+
+[VersionsDialog]
+windowsize=[399,297]
+vpanepos=150
 
